--- a/src/commcare_cloud/ansible/roles/couchdb2-preinstall/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/couchdb2-preinstall/tasks/main.yml
@@ -3,10 +3,10 @@
   become: yes
 
 - name: Install ndg-httpsclient so we can download couch
-  pip: name="{{ item }}"
+  pip:
+    name:
+      - ndg-httpsclient
   become: yes
-  with_items:
-    - ndg-httpsclient
 
 - name: Create couchdb2 dirs
   become: yes
