--- a/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
@@ -20,6 +20,8 @@ postgresql_archive_path: "{{ postgresql_dir_path }}/wal_archive"
 postgresql_archive_command: "cp %p {{ postgresql_dir_path }}/wal_archive/%f"
 postgresql_enable_archive: no
 
+postgresql_systemd_config_dir: "/etc/systemd/system/postgresql@.service.d"
+
 allow_dump_from_pgstandby: "{{ postgres_users.get('netvault') != None }}"
 
 # defaults should match the postgresql defaults
