Add quoting for postgres user

--- a/src/commcare_cloud/ansible/roles/postgresql/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql/tasks/main.yml
@@ -73,5 +73,5 @@
   become_user: postgres
   vars:
     ansible_ssh_pipelining: true
-  shell: "{{postgres_install_dir}}/bin/psql -U postgres -p {{postgresql_port}} {{postgresql_dbs.form_processing.proxy.name}} -c \"GRANT USAGE on FOREIGN DATA WRAPPER plproxy to {{postgresql_dbs.form_processing.proxy.user}}\""
+  shell: "{{postgres_install_dir}}/bin/psql -U postgres -p {{postgresql_port}} {{postgresql_dbs.form_processing.proxy.name}} -c \"GRANT USAGE on FOREIGN DATA WRAPPER plproxy to \\\"{{postgresql_dbs.form_processing.proxy.user}}\\\"\""
   when: postgresql_dbs.form_processing and postgresql_dbs.form_processing.proxy.host == inventory_hostname
