--- a/src/commcare_cloud/ansible/roles/postgresql_base/handlers/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/handlers/main.yml
@@ -10,3 +10,8 @@
 - name: Reload postgres
   become: yes
   action: service name=postgresql args="{{ postgresql_version }}" state=reloaded
+
+- name: reload systemd
+  become: yes
+  systemd:
+    daemon_reload: yes
