fix apt deprecation warnings
[DEPRECATION WARNING]: Invoking "apt" only once while using a loop via squash_actions is deprecated. Instead of using a loop to supply multiple items and specifying `name: "{{ item }}"`, please use `name:
['postgresql-{{ postgresql_version }}-plproxy', 'postgresql-contrib-{{ postgresql_version }}', 'postgresql-server-dev-{{ postgresql_version }}', 'python-docutils', 'libpq-dev', 'python-psycopg2', 'unzip']` and remove
the loop. This feature will be removed in version 2.11.

--- a/src/commcare_cloud/ansible/deploy_postgres.yml
+++ b/src/commcare_cloud/ansible/deploy_postgres.yml
@@ -28,12 +28,8 @@
     - name: Install python-psycopg2 to be able to set up remote postgresql
       become: yes
       block:
-        - apt: name={{ item }} state=latest
-          with_items:
-            - libpq-dev
-        - pip: name={{ item }} state=present
-          with_items:
-            - psycopg2
+        - apt: name=libpq-dev state=latest
+        - pip: name=psycopg2
     - name: Remote PostgreSQL
       include_role:
         name: postgresql_base
