--- a/src/commcare_cloud/ansible/roles/common_installs/tasks/bionic_apt_installs.yml
+++ b/src/commcare_cloud/ansible/roles/common_installs/tasks/bionic_apt_installs.yml
@@ -1,9 +1,9 @@
 - name: Install common packages (bionic)
-  apt: name="{{ item }}" state=present
   become: yes
-  with_items:
-    - software-properties-common
-    - npm
-    - python-minimal
-    - python3-pip
-    - ufw
+  apt:
+    name:
+      - software-properties-common
+      - npm
+      - python-minimal
+      - python3-pip
+      - ufw
