--- a/src/commcare_cloud/ansible/roles/nodejs/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/nodejs/tasks/main.yml
@@ -6,17 +6,13 @@
   when: add_nodejs_repo is changed
 
 - name: Install nodejs packages
-  apt: name="{{ item }}" state=present
+  apt: name="nodejs" state=present
   become: yes
-  with_items:
-    - nodejs
 
 - name: Install nodejs packages
-  apt: name="{{ item }}" state=present
+  apt: name="npm" state=present
   become: yes
   when: ansible_distribution_version == '18.04'
-  with_items:
-    - npm
 
 - name: Set NPM registry
   command: 'npm config set registry http://registry.npmjs.org/'
