--- a/src/commcare_cloud/ansible/roles/postgresql_base/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/tasks/main.yml
@@ -19,21 +19,21 @@
   apt: name="{{postgresql_binary}}" state=present
 
 - name: Install dependencies
-  apt: name="{{ item }}" state=present
-  with_items:
-    - "postgresql-{{ postgresql_version }}-plproxy"
-    - "postgresql-contrib-{{ postgresql_version }}"
-    - "postgresql-server-dev-{{ postgresql_version }}"
-    - python-docutils  # required for building pghashlib
-    - libpq-dev
-    - python-psycopg2
-    - unzip
+  apt:
+    name:
+      - "postgresql-{{ postgresql_version }}-plproxy"
+      - "postgresql-contrib-{{ postgresql_version }}"
+      - "postgresql-server-dev-{{ postgresql_version }}"
+      - python-docutils  # required for building pghashlib
+      - libpq-dev
+      - python-psycopg2
+      - unzip
 
 - name: Install PostgreSQL & dependencies (bionic)
-  apt: name="{{ item }}" state=present
-  with_items:
-    - python3-docutils  # required for building pghashlib
-    - python3-psycopg2
+  apt:
+    name:
+      - python3-docutils  # required for building pghashlib
+      - python3-psycopg2
   when: ansible_distribution_version == '18.04'
 
 - name: Check for original postgresql directory
