Fix syntax error

--- a/src/commcare_cloud/ansible/letsencrypt_cert.yml
+++ b/src/commcare_cloud/ansible/letsencrypt_cert.yml
@@ -13,7 +13,7 @@
 
     - name: Install Certbot
       apt:
-        name: "{{item}}"
+        name:
           - software-properties-common
           - certbot
       ignore_errors: '{{ ansible_check_mode }}'
