--- a/src/commcare_cloud/ansible/roles/java/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/java/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - name: installing repo for Java 8+ in Ubuntu
   apt_repository: repo='ppa:openjdk-r/ppa'
+  when: ansible_distribution_version == '14.04'
 
 - name: Install Java
   become: yes
