--- a/src/commcare_cloud/ansible/roles/backups/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/backups/tasks/main.yml
@@ -6,7 +6,7 @@
   vars:
     s3_user: "{{ blobdb_user }}"
     s3_user_home_dir: "~{{ blobdb_user }}"
-  when: blobdb_s3
+  when: blobdb_s3|bool
   tags:
     - cron
     - backups
