--- a/src/commcare_cloud/ansible/roles/postgresql_base/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/tasks/main.yml
@@ -103,7 +103,7 @@
     state: directory
     owner: postgres
     group: postgres
-  when: postgresql_enable_archive
+  when: postgresql_enable_archive|bool
 
 - name: Create clean WAL archive cron
   become: yes
@@ -169,7 +169,7 @@
   stat:
     path: "{{ postgresql_recovery_conf }}"
   register: recovery_file
-  when: is_pg_standby
+  when: is_pg_standby|bool
   tags:
     - postgres_users
     - replication
