--- a/environments/india/inventory.ini
+++ b/environments/india/inventory.ini
@@ -45,7 +45,7 @@ pgmain0-india.ccqpd1xrju8m.ap-south-1.rds.amazonaws.com
 citus1
 citus2
 
-[citusdb_cordinator:children]
+[citus_master:children]
 citus0
 
 [proxy:children]
