--- a/environments/development/inventory.ini
+++ b/environments/development/inventory.ini
@@ -30,10 +30,10 @@ hostname='citusdb3'
 [citusdb_worker:vars]
 ansible_python_interpreter = '/usr/bin/python3'
 
-[citusdb_cordinator]
+[citus_master]
 192.168.33.31
 
-[citusdb_cordinator:vars]
+[citus_master:vars]
 ansible_python_interpreter = '/usr/bin/python3'
 
 [db1]
