make citusdb group names consistent

--- a/environments/development/inventory.ini
+++ b/environments/development/inventory.ini
@@ -30,10 +30,10 @@ hostname='citusdb3'
 [citusdb_worker:vars]
 ansible_python_interpreter = '/usr/bin/python3'
 
-[citus_master]
+[citusdb_master]
 192.168.33.31
 
-[citus_master:vars]
+[citusdb_master:vars]
 ansible_python_interpreter = '/usr/bin/python3'
 
 [db1]
