--- a/src/commcare_cloud/ansible/roles/citusdb/tasks/setup_worker.yml
+++ b/src/commcare_cloud/ansible/roles/citusdb/tasks/setup_worker.yml
@@ -12,7 +12,7 @@
     lc_collate: 'en_US.UTF-8'
     lc_ctype: 'en_US.UTF-8'
     template: 'template0'
-  when: item.create and ((item.host in groups.citus_master) and (inventory_hostname in groups.citusdb_worker ))
+  when: item.create and ((item.host in groups.citusdb_master) and (inventory_hostname in groups.citusdb_worker ))
   with_items: "{{ postgresql_dbs.all }}"
 
 - name: Add Citus Extension on Worker Database
@@ -22,4 +22,4 @@
     name: citus
     db: "{{ item.name }}"
   with_items: "{{ postgresql_dbs.all }}"
-  when: (item.host in groups.citus_master) and (inventory_hostname in groups.citusdb_worker)
+  when: (item.host in groups.citusdb_master) and (inventory_hostname in groups.citusdb_worker)
