Document other ssl depenedency

--- a/src/commcare_cloud/ansible/roles/common_installs/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/common_installs/tasks/main.yml
@@ -51,7 +51,7 @@
       - libfreetype6-dev
       - ranger  # cmdline file browser
       - libffi-dev  # Required for installing github3py
-      - libssl-dev  # Required for pip setup tools
+      - libssl-dev  # Required for pip setup tools and libcurl4-openssl-dev
       - tmux
       - reptyr # move process into tmux session
       - unzip
