--- a/src/commcare_cloud/ansible/roles/nodejs/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/nodejs/tasks/main.yml
@@ -1,6 +1,17 @@
 - include: trusty_apt_repos.yml
   when: ansible_distribution_version == '14.04'
 
+- name: Add nodejs apt key
+  apt_key:
+    url: https://deb.nodesource.com/gpgkey/nodesource.gpg.key
+  when: ansible_distribution_version == '18.04'
+
+- name: Add git nodejs repo
+  apt_repository:
+    repo: 'deb https://deb.nodesource.com/node_8.x bionic main'
+    state: present
+  when: ansible_distribution_version == '18.04'
+
 - name: Update package list
   apt: update_cache=yes
   when: add_nodejs_repo is changed
@@ -8,11 +19,6 @@
 - name: Install nodejs packages
   apt: name="nodejs" state=present
   become: yes
-
-- name: Install npm packages (Bionic)
-  apt: name="npm" state=present
-  become: yes
-  when: ansible_distribution_version == '18.04'
 
 - name: Set NPM registry
   command: 'npm config set registry http://registry.npmjs.org/'
