Fix bare variable warning

--- a/src/commcare_cloud/ansible/roles/shared_dir/tasks/install.yml
+++ b/src/commcare_cloud/ansible/roles/shared_dir/tasks/install.yml
@@ -1,14 +1,14 @@
 ---
 
 - name: Update the apt cache
-  when: shared_drive_enabled
+  when: shared_drive_enabled|bool
   apt:
     update_cache: yes
     cache_valid_time: 7200
 
 - name: Install NFS packages
   become: yes
-  when: shared_drive_enabled
+  when: shared_drive_enabled|bool
   apt:
     name:
       - nfs-kernel-server
@@ -17,7 +17,7 @@
     - nfs
 
 - name: ensure nfs service is running
-  when: shared_drive_enabled
+  when: shared_drive_enabled|bool
   service:
     name: nfs-kernel-server
     state: started
