Fix pip deprecation warning

--- a/src/commcare_cloud/ansible/roles/commcarehq/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/commcarehq/tasks/main.yml
@@ -103,23 +103,21 @@
 
 - name: Upgrade python packages
   pip:
-    name: "{{ item }}"
+    name:
+      - six
+      - pip
+      - setuptools
     state: latest
     virtualenv: "{{ virtualenv_home }}"
-  with_items:
-    - six
-    - pip
-    - setuptools
 
 - name: py3 Upgrade python packages
   pip:
-    name: "{{ item }}"
+    name:
+      - six
+      - pip
+      - setuptools
     state: latest
     virtualenv: "{{ py3_virtualenv_home }}"
-  with_items:
-    - six
-    - pip
-    - setuptools
   tags:
     - py3
 
