--- a/environments/india/inventory.ini
+++ b/environments/india/inventory.ini
@@ -15,7 +15,7 @@
 [airflow1]
 10.203.10.63 hostname=airflow1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 [celery1]
-10.203.10.13 hostname=celery1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+10.203.10.13 hostname=celery1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 swap_size=4G
 [couch2]
 10.203.40.187 hostname=couch2-india ufw_private_interface=eth0
 [couch3]
