--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -158,7 +158,7 @@ formplayer0
 formplayer1
 
 [redis1]
-10.202.40.34 hostname=redis1-production ufw_private_interface=eth0
+10.202.40.34 hostname=redis1-production ufw_private_interface=eth0 swap_size=1G
 
 [redis:children]
 redis1
