--- a/environments/production/public.yml
+++ b/environments/production/public.yml
@@ -12,7 +12,7 @@ DATADOG_TRACE:
     env: production
 
 LOCAL_APPS:
-  - {name: 'ddtrace.contrib.django', host: webworkers}
+  - {name: 'ddtrace.contrib.django', host: hq_webworkers}
 
 elasticsearch_endpoint: '{{ groups.elasticsearch.0 }}'
 elasticsearch_cluster_name: 'prodhqes-1.x'
