--- a/src/commcare_cloud/ansible/migrate_on_fresh_install.yml
+++ b/src/commcare_cloud/ansible/migrate_on_fresh_install.yml
@@ -6,7 +6,7 @@
       become: yes
       become_user: "{{ cchq_user }}"
       django_manage:
-        command: migrate_multi
+        command: 'migrate_multi --noinput'
         app_path: "{{ code_home }}"
         virtualenv: "{{ virtualenv_home }}"
       environment:
