--- a/src/commcare_cloud/ansible/roles/citusdb/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/citusdb/tasks/main.yml
@@ -20,6 +20,10 @@
    apt: 
     name: "{{citus_binary}}"
     state: present
+
+ - name: Add citus to postgres prelod libraries
+   shell: "pg_conftool 11 main set shared_preload_libraries 'citus, pg_stat_statements'"
+   become: yes
    notify: Restart postgres
 
  - name: Add Citus Extension on Coordinator Database
