Fix check_s3_backup.py script and change its check
it now checks for a recent daily and weekly backup, prints out whether
it found them, and exits with -1 if there isn't a recent daily backup or
there isn't a recent weekly backup

--- a/src/commcare_cloud/ansible/deploy_db.yml
+++ b/src/commcare_cloud/ansible/deploy_db.yml
@@ -11,7 +11,7 @@
   become: true
   roles:
     - {role: ecryptfs, tags: 'ecryptfs'}
-    - {role: backups, tags: 'backups'}
+    - {role: backups, tags: 'backups,backups-only'}
 
 - name : PostgreSQL
   import_playbook: deploy_postgres.yml
