Start supervisor on boot

--- a/src/commcare_cloud/ansible/roles/supervisor/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/supervisor/tasks/main.yml
@@ -81,5 +81,5 @@
 
 - name: start supervisord
   become: yes
-  service: name=supervisord state=started
+  service: name=supervisord enabled=yes
   when: which_supervisord.stdout
