--- a/environments/india/inventory.ini
+++ b/environments/india/inventory.ini
@@ -22,6 +22,12 @@
 10.203.40.186 hostname=couch3-india ufw_private_interface=eth0
 [couch4]
 10.203.40.188 hostname=couch4-india ufw_private_interface=eth0
+[couch5]
+10.203.40.126 hostname=couch5-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[couch6]
+10.203.40.163 hostname=couch6-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[couch7]
+10.203.40.250 hostname=couch7-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 [redis0]
 10.203.40.128 hostname=redis0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 [es0]
@@ -91,6 +97,9 @@ redis0
 couch2
 couch3
 couch4
+couch5
+couch6
+couch7
 
 [couchdb2_proxy:children]
 couch2
