--- a/environments/india/terraform.yml
+++ b/environments/india/terraform.yml
@@ -105,7 +105,28 @@ servers:
     volume_size: 275
     group: couchdb2
     os: trusty
-
+  - server_name: "couch5-india"
+    server_instance_type: "c5.2xlarge"
+    network_tier: "db-private"
+    az: "a"
+    volume_size: 275
+    group: couchdb2
+    os: bionic
+  - server_name: "couch6-india"
+    server_instance_type: "c5.2xlarge"
+    network_tier: "db-private"
+    az: "a"
+    volume_size: 275
+    group: couchdb2
+    os: bionic
+  - server_name: "couch7-india"
+    server_instance_type: "c5.2xlarge"
+    network_tier: "db-private"
+    az: "a"
+    volume_size: 275
+    group: couchdb2
+    os: bionic
+    
   - server_name: "redis0-india"
     server_instance_type: "r5.large"
     network_tier: "db-private"
