--- a/src/commcare_cloud/ansible/roles/commcarehq/tasks/pillowtop.yml
+++ b/src/commcare_cloud/ansible/roles/commcarehq/tasks/pillowtop.yml
@@ -34,7 +34,11 @@
   register: pillowtop_pillow_retry_files
 
 - set_fact:
-    pillowtop_supervisor_files: "{{ pillowtop_conf_file.get('results', []) + pillowtop_form_feed_conf_file.get('results', []) }} + pillowtop_pillow_retry_files.get('results', []) "
+    pillowtop_supervisor_files: "{{ [pillowtop_conf_file] + pillowtop_form_feed_conf_file.get('results', []) + pillowtop_pillow_retry_files.get('results', []) }}"
+  tags:
+    - services
 
 - set_fact:
     pillowtop_managed_files: "{{ pillowtop_supervisor_files|selectattr('dest', 'string')|map(attribute='dest')|list + pillowtop_supervisor_files|selectattr('path', 'string')|map(attribute='path')|select|list }}"
+  tags:
+    - services
