--- a/environments/india/terraform.yml
+++ b/environments/india/terraform.yml
@@ -113,6 +113,7 @@ servers:
     block_device:
       volume_size: 250
     group: couchdb2
+    os: bionic
   - server_name: "couch6-india"
     server_instance_type: "c5.2xlarge"
     network_tier: "db-private"
@@ -121,6 +122,7 @@ servers:
     block_device:
       volume_size: 250
     group: couchdb2
+    os: bionic
   - server_name: "couch7-india"
     server_instance_type: "c5.2xlarge"
     network_tier: "db-private"
@@ -129,7 +131,9 @@ servers:
     block_device:
       volume_size: 250
     group: couchdb2
-    
+    os: bionic
+
+
   - server_name: "redis0-india"
     server_instance_type: "r5.large"
     network_tier: "db-private"
