--- a/environments/india/inventory.ini
+++ b/environments/india/inventory.ini
@@ -23,11 +23,11 @@
 [couch4]
 10.203.40.188 hostname=couch4-india ufw_private_interface=eth0
 [couch5]
-10.203.40.178 hostname=couch5-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+10.203.40.178 hostname=couch5-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 datavol_device=/dev/nvme1n
 [couch6]
-10.203.40.191 hostname=couch6-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+10.203.40.191 hostname=couch6-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 datavol_device=/dev/nvme1n
 [couch7]
-10.203.40.56 hostname=couch7-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+10.203.40.56 hostname=couch7-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 datavol_device=/dev/nvme1n
 [redis0]
 10.203.40.128 hostname=redis0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 [es0]
