--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -127,6 +127,14 @@ site_locations:
     try_files: "$uri $uri/index.html $uri/ =404"
     auth_basic: '"Restricted Content"'
     auth_basic_user_file: "/etc/nginx/.htpasswd_adhaar_id_scanner_apk"
+  - name: /sikkim_files
+    try_files: "$uri $uri/index.html $uri/ =404"
+    auth_basic: '"Restricted Content"'
+    auth_basic_user_file: "/etc/nginx/.htpasswd_sikkim_files"
+  - name: /assamese-icds-cas-files
+    try_files: "$uri $uri/index.html $uri/ =404"
+    auth_basic: '"Restricted Content"'
+    auth_basic_user_file: "/etc/nginx/.htpasswd_asm_files"
 
 couchdb_use_haproxy: True
 couchdb_reduce_limit: False
