--- a/src/commcare_cloud/ansible/roles/couchdb2/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/couchdb2/tasks/main.yml
@@ -35,6 +35,10 @@
     status_code: 201, 412 # 412 means already set up (conflict)
     body: '{}'
   when: inventory_hostname == groups.couchdb2.0
+  register: result
+  until: not result.failed or 'Connection refused' not in result.msg
+  retries: 5
+  delay: 20
   with_items:
    - _users
    - _replicator
@@ -183,4 +187,7 @@
     state: monitored
   tags: monit
   ignore_errors: "{{ ansible_check_mode }}"
-
+  register: result
+  until: not result.failed or 'process not presently configured with monit' not in result.msg
+  retries: 5
+  delay: 20
