[prove-deploy] Scope systemd commands to 18.04 only

--- a/src/commcare_cloud/ansible/roles/elasticsearch/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/elasticsearch/tasks/main.yml
@@ -78,7 +78,7 @@
     state: restarted
     daemon-reload: yes
     name: elasticsearch
-  when: copy_elasticsearch_systemd_result.changed
+  when: copy_elasticsearch_systemd_result.changed and ansible_distribution_version == '18.04'
 
 - debug: msg="If you're just updating the ES conf then you sill need to restart the cluster. Use  the 'es_rolling_restart' playbook."
   when: copy_elasticsearch_conf_result.changed
