Add new production couchdb2 bionic machines

--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -229,6 +229,13 @@ es_data
 [couch9]
 10.202.40.134 hostname=couch9-production ufw_private_interface=eth0 datavol_device=/dev/nvme1n
 
+[couch10]
+10.202.40.50 hostname=couch10-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 datavol_device=/dev/nvme1n
+[couch11]
+10.202.40.170 hostname=couch11-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 datavol_device=/dev/nvme1n
+[couch12]
+10.202.40.52 hostname=couch12-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 datavol_device=/dev/nvme1n
+
 [couchdb2:children]
 couch3
 couch4
@@ -236,6 +243,9 @@ couch5
 couch7
 couch8
 couch9
+couch10
+couch11
+couch12
 
 [couchdb2:vars]
 swap_size=8G
