--- a/environments/production/aws-resources.yml
+++ b/environments/production/aws-resources.yml
@@ -6,6 +6,9 @@ celery4-production: 10.202.12.62
 celery5-production: 10.202.12.120
 celery6-production: 10.202.12.126
 control-production: 10.202.10.79
+couch10-production: 10.202.40.50
+couch11-production: 10.202.40.170
+couch12-production: 10.202.40.52
 couch3-production: 10.202.40.135
 couch4-production: 10.202.40.97
 couch5-production: 10.202.40.5
