--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -215,6 +215,35 @@ servers:
     group: "couchdb2"
     os: trusty
 
+  - server_name: "couch10-production"
+    server_instance_type: c5.9xlarge
+    network_tier: "db-private"
+    az: "a"
+    volume_size: 30
+    block_device:
+      volume_size: 2200
+    group: "couchdb2"
+    os: bionic
+  - server_name: "couch11-production"
+    server_instance_type: c5.9xlarge
+    network_tier: "db-private"
+    az: "a"
+    volume_size: 30
+    block_device:
+      volume_size: 2200
+    group: "couchdb2"
+    os: bionic
+  - server_name: "couch12-production"
+    server_instance_type: c5.9xlarge
+    network_tier: "db-private"
+    az: "a"
+    volume_size: 30
+    block_device:
+      volume_size: 2200
+    group: "couchdb2"
+    os: bionic
+
+
   - server_name: "rabbit0-production"
     server_instance_type: t3.large
     network_tier: "db-private"
