Treat absence of [lvm] group the same as empty [lvm] group
this was previously failing with
```
fatal: [10.202.40.50]: FAILED! => {"msg": "The conditional check 'datavol_device is defined and ansible_hostname not in groups['lvm']' failed. The error was: error while evaluating conditional (datavol_device is defined and ansible_hostname not in groups['lvm']): Unable to look up a name or access an attribute in template string ({% if datavol_device is defined and ansible_hostname not in groups['lvm'] %} True {% else %} False {% endif %}).\nMake sure your variable name does not contain invalid characters like '-': argument of type 'AnsibleUndefined' is not iterable\n\nThe error appears to be in '/home/droberts/commcare-cloud/src/commcare_cloud/ansible/roles/ecryptfs/tasks/main.yml': line 3, column 3, but may\nbe elsewhere in the file depending on the exact syntax problem.\n\nThe offending line appears to be:\n\n\n- name: Check for valid partition table on block storage device\n  ^ here\n"}
```

--- a/src/commcare_cloud/ansible/roles/ecryptfs/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/ecryptfs/tasks/main.yml
@@ -4,7 +4,7 @@
   become: yes
   shell: fdisk -l 2>&1 | grep 'Disk {{ datavol_device }} doesn.t contain a valid partition table'
   register: partition_check
-  when: datavol_device is defined and ansible_hostname not in groups['lvm']
+  when: datavol_device is defined and ansible_hostname not in groups.get('lvm', [])
   changed_when: false
   failed_when: false
   check_mode: no
@@ -20,7 +20,7 @@
   #   - default - start at beginning of disk
   #   - default - use entire disk
   # w - write the partition table
-  when: datavol_device is defined and partition_check.rc == 0 and ansible_hostname not in groups['lvm']
+  when: datavol_device is defined and partition_check.rc == 0 and ansible_hostname not in groups.get('lvm', [])
 
 - name: Format block storage volume
   become: yes
