--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -135,6 +135,10 @@ site_locations:
     try_files: "$uri $uri/index.html $uri/ =404"
     auth_basic: '"Restricted Content"'
     auth_basic_user_file: "/etc/nginx/.htpasswd_asm_files"
+  - name: /kannada-icds-cas-files
+    try_files: "$uri $uri/index.html $uri/ =404"
+    auth_basic: '"Restricted Content"'
+    auth_basic_user_file: "/etc/nginx/.htpasswd_kan_files"
 
 couchdb_use_haproxy: True
 couchdb_reduce_limit: False
