--- a/src/commcare_cloud/ansible/reinstall_missing.yml
+++ b/src/commcare_cloud/ansible/reinstall_missing.yml
@@ -9,6 +9,7 @@
       - cloud-init
       - command-not-found
       - dh-python
+      - hibagent
       - iotop
       - landscape-common
       - language-selector-common
