--- a/environments/swiss/app-processes.yml
+++ b/environments/swiss/app-processes.yml
@@ -1,7 +1,7 @@
 formplayer_memory: "1024m"
 
 celery_processes:
-  'swiss.commcarehq.org':
+  swiss0:
     repeat_record_queue,celery,export_download_queue,case_import_queue,reminder_case_update_queue,background_queue,case_rule_queue,analytics_queue,celery_periodic,email_queue,reminder_rule_queue:
       concurrency: 3
     beat: {}
@@ -10,7 +10,7 @@ celery_processes:
       optimize: True
     flower: {}
 pillows:
-  'swiss.commcarehq.org':
+  swiss0:
     AppDbChangeFeedPillow:
       num_processes: 1
     ApplicationToElasticsearchPillow:
