--- a/environments/swiss/inventory.ini
+++ b/environments/swiss/inventory.ini
@@ -1,53 +1,59 @@
 [swiss0]
 185.19.29.53 hostname=swiss0
 
-[proxy]
-swiss.commcarehq.org
+[proxy:children]
+swiss0
 
-[webworkers]
-swiss.commcarehq.org
+[webworkers:children]
+swiss0
 
-[couchdb]
-swiss.commcarehq.org
+[couchdb:children]
+swiss0
 
-[postgresql]
-swiss.commcarehq.org
+[postgresql:children]
+swiss0
 
-[rabbitmq]
-swiss.commcarehq.org
+[rabbitmq:children]
+swiss0
 
-[zookeeper]
-swiss.commcarehq.org
+[zookeeper:children]
+swiss0
 
-[kafka]
-swiss.commcarehq.org kafka_broker_id=0
+[kafka:children]
+swiss0
 
-[pg_backup]
-swiss.commcarehq.org
+[kafka:vars]
+kafka_broker_id=0
 
-[celery]
-swiss.commcarehq.org
+[pg_backup:children]
+swiss0
 
-[pillowtop]
-swiss.commcarehq.org
+[celery:children]
+swiss0
 
-[formplayer]
-swiss.commcarehq.org
+[pillowtop:children]
+swiss0
 
-[redis]
-swiss.commcarehq.org
+[formplayer:children]
+swiss0
 
-[elasticsearch]
-swiss.commcarehq.org elasticsearch_node_name=hqes1
+[redis:children]
+swiss0
 
-[shared_dir_host]
-swiss.commcarehq.org
+[elasticsearch:children]
+swiss0
 
-[pg_standby]
+[elasticsearch:vars]
+elasticsearch_node_name=hqes1
+
+[shared_dir_host:children]
+swiss0
+
+[pg_standby:children]
 # empty
 
-[control]
-swiss.commcarehq.org
+[control:children]
+swiss0
 
-[django_manage]
-swiss.commcarehq.org
+[django_manage:children]
+swiss0
