--- a/environments/swiss/inventory.ini
+++ b/environments/swiss/inventory.ini
@@ -7,7 +7,10 @@ swiss0
 [webworkers:children]
 swiss0
 
-[couchdb:children]
+[couchdb2_proxy:children]
+swiss0
+
+[couchdb2:children]
 swiss0
 
 [postgresql:children]
