--- a/environments/swiss/public.yml
+++ b/environments/swiss/public.yml
@@ -39,12 +39,17 @@ KSPLICE_ACTIVE: yes
 
 couch_dbs:
   default:
-    host: 185.12.7.167
-    port: 5984
+    host: "{{ groups.couchdb2_proxy.0 }}"
+    port: "{{ couchdb2_proxy_port }}"
     name: commcarehq
     username: "{{ localsettings_private.COUCH_USERNAME }}"
     password: "{{ localsettings_private.COUCH_PASSWORD }}"
     is_https: False
+
+couchdb2:
+  username: "{{ localsettings_private.COUCH_USERNAME }}"
+  password: "{{ localsettings_private.COUCH_PASSWORD }}"
+
 
 TWO_FACTOR_GATEWAY_ENABLED: True
 
