Compact production couchdb at a lower threshold

--- a/environments/production/public.yml
+++ b/environments/production/public.yml
@@ -55,6 +55,10 @@ couchdb2:
   username: "{{ localsettings_private.COUCH_USERNAME }}"
   password: "{{ localsettings_private.COUCH_PASSWORD }}"
 
+couchdb_compaction_settings:
+  _default: '[{db_fragmentation, "6%"}, {view_fragmentation, "6%"}, {from, "17:00"}, {to, "22:30"}]'
+
+
 couchdb2_client_max_body_size: 100M
 
 couchdb_reduce_limit: False
