--- a/src/commcare_cloud/ansible/roles/kafka/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/kafka/tasks/main.yml
@@ -10,7 +10,7 @@
   lineinfile:
     dest: /etc/environment
     line: 'JMX_PORT={{ KAFKA_JMX_PORT }}'
-    state: {{ 'present' if ansible_distribution_version == '14.04' else 'absent' }}
+    state: "{{ 'present' if ansible_distribution_version == '14.04' else 'absent' }}"
 
 - name: Download Kafka
   get_url: url="http://{{ apache_mirror }}/kafka/{{ kafka_version }}/kafka_2.10-{{ kafka_version }}.tgz" dest="/opt/kafka_2.10-{{ kafka_version }}.tgz"
