--- a/tests/postgresql_config/2018-04-04-development-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-development-snapshot/.generated.yml
@@ -1,6 +1,7 @@
 postgresql_dbs:
   all:
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: default
     django_migrate: true
     host: 192.168.33.16
@@ -12,7 +13,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: ucr
     django_migrate: false
     host: 192.168.33.16
@@ -24,7 +26,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: null
     django_migrate: true
     host: 192.168.33.16
@@ -39,6 +42,7 @@ postgresql_dbs:
   custom: []
   form_processing: null
   formplayer:
+    conn_max_age: null
     create: true
     django_alias: null
     django_migrate: true
@@ -52,6 +56,7 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   main:
+    conn_max_age: null
     create: true
     django_alias: default
     django_migrate: true
@@ -67,6 +72,7 @@ postgresql_dbs:
   standby: []
   synclogs: null
   ucr:
+    conn_max_age: null
     create: true
     django_alias: ucr
     django_migrate: false
