--- a/tests/postgresql_config/2018-04-04-enikshay-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-enikshay-snapshot/.generated.yml
@@ -1,6 +1,7 @@
 postgresql_dbs:
   all:
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: default
     django_migrate: true
     host: 172.25.3.5
@@ -12,7 +13,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p1
     django_migrate: true
     host: 172.25.3.5
@@ -27,7 +29,8 @@ postgresql_dbs:
     - 0
     - 103
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p10
     django_migrate: true
     host: 172.25.3.5
@@ -42,7 +45,8 @@ postgresql_dbs:
     - 927
     - 1023
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p2
     django_migrate: true
     host: 172.25.3.5
@@ -57,7 +61,8 @@ postgresql_dbs:
     - 104
     - 205
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p3
     django_migrate: true
     host: 172.25.3.5
@@ -72,7 +77,8 @@ postgresql_dbs:
     - 206
     - 308
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p4
     django_migrate: true
     host: 172.25.3.5
@@ -87,7 +93,8 @@ postgresql_dbs:
     - 309
     - 411
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p5
     django_migrate: true
     host: 172.25.3.5
@@ -102,7 +109,8 @@ postgresql_dbs:
     - 412
     - 514
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p6
     django_migrate: true
     host: 172.25.3.5
@@ -117,7 +125,8 @@ postgresql_dbs:
     - 515
     - 617
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p7
     django_migrate: true
     host: 172.25.3.5
@@ -132,7 +141,8 @@ postgresql_dbs:
     - 618
     - 720
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p8
     django_migrate: true
     host: 172.25.3.5
@@ -147,7 +157,8 @@ postgresql_dbs:
     - 721
     - 823
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p9
     django_migrate: true
     host: 172.25.3.5
@@ -162,7 +173,8 @@ postgresql_dbs:
     - 824
     - 926
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: proxy
     django_migrate: true
     host: 172.25.3.5
@@ -174,7 +186,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: synclogs
     django_migrate: true
     host: 172.25.3.5
@@ -186,7 +199,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: ucr
     django_migrate: false
     host: 172.25.3.5
@@ -198,7 +212,8 @@ postgresql_dbs:
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: null
     django_migrate: true
     host: 172.25.3.5
@@ -214,6 +229,7 @@ postgresql_dbs:
   form_processing:
     partitions:
       p1:
+        conn_max_age: null
         create: true
         django_alias: p1
         django_migrate: true
@@ -230,6 +246,7 @@ postgresql_dbs:
         - 103
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p10:
+        conn_max_age: null
         create: true
         django_alias: p10
         django_migrate: true
@@ -246,6 +263,7 @@ postgresql_dbs:
         - 1023
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p2:
+        conn_max_age: null
         create: true
         django_alias: p2
         django_migrate: true
@@ -262,6 +280,7 @@ postgresql_dbs:
         - 205
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p3:
+        conn_max_age: null
         create: true
         django_alias: p3
         django_migrate: true
@@ -278,6 +297,7 @@ postgresql_dbs:
         - 308
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p4:
+        conn_max_age: null
         create: true
         django_alias: p4
         django_migrate: true
@@ -294,6 +314,7 @@ postgresql_dbs:
         - 411
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p5:
+        conn_max_age: null
         create: true
         django_alias: p5
         django_migrate: true
@@ -310,6 +331,7 @@ postgresql_dbs:
         - 514
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p6:
+        conn_max_age: null
         create: true
         django_alias: p6
         django_migrate: true
@@ -326,6 +348,7 @@ postgresql_dbs:
         - 617
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p7:
+        conn_max_age: null
         create: true
         django_alias: p7
         django_migrate: true
@@ -342,6 +365,7 @@ postgresql_dbs:
         - 720
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p8:
+        conn_max_age: null
         create: true
         django_alias: p8
         django_migrate: true
@@ -358,6 +382,7 @@ postgresql_dbs:
         - 823
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p9:
+        conn_max_age: null
         create: true
         django_alias: p9
         django_migrate: true
@@ -374,6 +399,7 @@ postgresql_dbs:
         - 926
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
     proxy:
+      conn_max_age: null
       create: true
       django_alias: proxy
       django_migrate: true
@@ -387,6 +413,7 @@ postgresql_dbs:
       query_stats: false
       user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   formplayer:
+    conn_max_age: null
     create: true
     django_alias: null
     django_migrate: true
@@ -400,6 +427,7 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   main:
+    conn_max_age: null
     create: true
     django_alias: default
     django_migrate: true
@@ -414,6 +442,7 @@ postgresql_dbs:
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   standby: []
   synclogs:
+    conn_max_age: null
     create: true
     django_alias: synclogs
     django_migrate: true
@@ -427,6 +456,7 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   ucr:
+    conn_max_age: null
     create: true
     django_alias: ucr
     django_migrate: false
