--- a/tests/postgresql_config/2018-04-04-icds-new-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-icds-new-snapshot/.generated.yml
@@ -1,6 +1,7 @@
 postgresql_dbs:
   all:
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: default
     django_migrate: true
     host: 10.247.164.26
@@ -12,7 +13,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: icds-ucr
     django_migrate: true
     host: 10.247.164.25
@@ -24,7 +26,8 @@ postgresql_dbs:
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: false
+  - conn_max_age: 120
+    create: false
     django_alias: icds-ucr-standby1
     django_migrate: false
     host: 10.247.164.24
@@ -37,7 +40,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: p1
     django_migrate: true
     host: 10.247.164.66
@@ -52,7 +56,8 @@ postgresql_dbs:
     - 0
     - 103
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: p10
     django_migrate: true
     host: 10.247.164.64
@@ -67,7 +72,8 @@ postgresql_dbs:
     - 927
     - 1023
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: p2
     django_migrate: true
     host: 10.247.164.66
@@ -82,7 +88,8 @@ postgresql_dbs:
     - 104
     - 205
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: p3
     django_migrate: true
     host: 10.247.164.21
@@ -97,7 +104,8 @@ postgresql_dbs:
     - 206
     - 308
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: p4
     django_migrate: true
     host: 10.247.164.21
@@ -112,7 +120,8 @@ postgresql_dbs:
     - 309
     - 411
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: p5
     django_migrate: true
     host: 10.247.164.21
@@ -127,7 +136,8 @@ postgresql_dbs:
     - 412
     - 514
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: p6
     django_migrate: true
     host: 10.247.164.20
@@ -142,7 +152,8 @@ postgresql_dbs:
     - 515
     - 617
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: p7
     django_migrate: true
     host: 10.247.164.20
@@ -157,7 +168,8 @@ postgresql_dbs:
     - 618
     - 720
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: p8
     django_migrate: true
     host: 10.247.164.20
@@ -172,7 +184,8 @@ postgresql_dbs:
     - 721
     - 823
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: p9
     django_migrate: true
     host: 10.247.164.64
@@ -187,7 +200,8 @@ postgresql_dbs:
     - 824
     - 926
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: proxy
     django_migrate: true
     host: 10.247.164.56
@@ -199,7 +213,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: synclogs
     django_migrate: true
     host: 10.247.164.70
@@ -211,7 +226,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: ucr
     django_migrate: false
     host: 10.247.164.25
@@ -223,7 +239,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: null
     django_migrate: true
     host: 10.247.164.25
@@ -236,7 +253,8 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   custom:
-  - create: true
+  - conn_max_age: 120
+    create: true
     django_alias: icds-ucr
     django_migrate: true
     host: 10.247.164.25
@@ -251,6 +269,7 @@ postgresql_dbs:
   form_processing:
     partitions:
       p1:
+        conn_max_age: 120
         create: true
         django_alias: p1
         django_migrate: true
@@ -267,6 +286,7 @@ postgresql_dbs:
         - 103
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p10:
+        conn_max_age: 120
         create: true
         django_alias: p10
         django_migrate: true
@@ -283,6 +303,7 @@ postgresql_dbs:
         - 1023
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p2:
+        conn_max_age: 120
         create: true
         django_alias: p2
         django_migrate: true
@@ -299,6 +320,7 @@ postgresql_dbs:
         - 205
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p3:
+        conn_max_age: 120
         create: true
         django_alias: p3
         django_migrate: true
@@ -315,6 +337,7 @@ postgresql_dbs:
         - 308
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p4:
+        conn_max_age: 120
         create: true
         django_alias: p4
         django_migrate: true
@@ -331,6 +354,7 @@ postgresql_dbs:
         - 411
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p5:
+        conn_max_age: 120
         create: true
         django_alias: p5
         django_migrate: true
@@ -347,6 +371,7 @@ postgresql_dbs:
         - 514
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p6:
+        conn_max_age: 120
         create: true
         django_alias: p6
         django_migrate: true
@@ -363,6 +388,7 @@ postgresql_dbs:
         - 617
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p7:
+        conn_max_age: 120
         create: true
         django_alias: p7
         django_migrate: true
@@ -379,6 +405,7 @@ postgresql_dbs:
         - 720
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p8:
+        conn_max_age: 120
         create: true
         django_alias: p8
         django_migrate: true
@@ -395,6 +422,7 @@ postgresql_dbs:
         - 823
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p9:
+        conn_max_age: 120
         create: true
         django_alias: p9
         django_migrate: true
@@ -411,6 +439,7 @@ postgresql_dbs:
         - 926
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
     proxy:
+      conn_max_age: 120
       create: true
       django_alias: proxy
       django_migrate: true
@@ -424,6 +453,7 @@ postgresql_dbs:
       query_stats: false
       user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   formplayer:
+    conn_max_age: 120
     create: true
     django_alias: null
     django_migrate: true
@@ -437,6 +467,7 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   main:
+    conn_max_age: 120
     create: true
     django_alias: default
     django_migrate: true
@@ -450,7 +481,8 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   standby:
-  - create: false
+  - conn_max_age: 120
+    create: false
     django_alias: icds-ucr-standby1
     django_migrate: false
     host: 10.247.164.24
@@ -464,6 +496,7 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   synclogs:
+    conn_max_age: 120
     create: true
     django_alias: synclogs
     django_migrate: true
@@ -477,6 +510,7 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   ucr:
+    conn_max_age: 120
     create: true
     django_alias: ucr
     django_migrate: false
