--- a/tests/postgresql_config/2018-04-04-production-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-production-snapshot/.generated.yml
@@ -1,6 +1,7 @@
 postgresql_dbs:
   all:
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: default
     django_migrate: true
     host: hqdb0.internal-va.commcarehq.org
@@ -12,7 +13,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p1
     django_migrate: true
     host: hqdb1.internal-va.commcarehq.org
@@ -27,7 +29,8 @@ postgresql_dbs:
     - 0
     - 204
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p2
     django_migrate: true
     host: hqdb1.internal-va.commcarehq.org
@@ -42,7 +45,8 @@ postgresql_dbs:
     - 205
     - 409
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p3
     django_migrate: true
     host: hqdb2.internal-va.commcarehq.org
@@ -57,7 +61,8 @@ postgresql_dbs:
     - 410
     - 614
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p4
     django_migrate: true
     host: hqdb2.internal-va.commcarehq.org
@@ -72,7 +77,8 @@ postgresql_dbs:
     - 615
     - 819
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p5
     django_migrate: true
     host: hqdb2.internal-va.commcarehq.org
@@ -87,7 +93,8 @@ postgresql_dbs:
     - 820
     - 1023
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: proxy
     django_migrate: true
     host: hqdb1.internal-va.commcarehq.org
@@ -99,7 +106,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: synclogs
     django_migrate: true
     host: pgsynclog.internal-va.commcarehq.org
@@ -111,7 +119,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: ucr
     django_migrate: false
     host: hqdb0.internal-va.commcarehq.org
@@ -123,7 +132,8 @@ postgresql_dbs:
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: null
     django_migrate: true
     host: hqdb0.internal-va.commcarehq.org
@@ -139,6 +149,7 @@ postgresql_dbs:
   form_processing:
     partitions:
       p1:
+        conn_max_age: null
         create: true
         django_alias: p1
         django_migrate: true
@@ -155,6 +166,7 @@ postgresql_dbs:
         - 204
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p2:
+        conn_max_age: null
         create: true
         django_alias: p2
         django_migrate: true
@@ -171,6 +183,7 @@ postgresql_dbs:
         - 409
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p3:
+        conn_max_age: null
         create: true
         django_alias: p3
         django_migrate: true
@@ -187,6 +200,7 @@ postgresql_dbs:
         - 614
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p4:
+        conn_max_age: null
         create: true
         django_alias: p4
         django_migrate: true
@@ -203,6 +217,7 @@ postgresql_dbs:
         - 819
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p5:
+        conn_max_age: null
         create: true
         django_alias: p5
         django_migrate: true
@@ -219,6 +234,7 @@ postgresql_dbs:
         - 1023
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
     proxy:
+      conn_max_age: null
       create: true
       django_alias: proxy
       django_migrate: true
@@ -232,6 +248,7 @@ postgresql_dbs:
       query_stats: false
       user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   formplayer:
+    conn_max_age: null
     create: true
     django_alias: null
     django_migrate: true
@@ -245,6 +262,7 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   main:
+    conn_max_age: null
     create: true
     django_alias: default
     django_migrate: true
@@ -259,6 +277,7 @@ postgresql_dbs:
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   standby: []
   synclogs:
+    conn_max_age: null
     create: true
     django_alias: synclogs
     django_migrate: true
@@ -272,6 +291,7 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   ucr:
+    conn_max_age: null
     create: true
     django_alias: ucr
     django_migrate: false
