--- a/tests/postgresql_config/2018-04-04-softlayer-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-softlayer-snapshot/.generated.yml
@@ -1,6 +1,7 @@
 postgresql_dbs:
   all:
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: default
     django_migrate: true
     host: 10.162.36.205
@@ -12,7 +13,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p1
     django_migrate: true
     host: 10.162.36.205
@@ -27,7 +29,8 @@ postgresql_dbs:
     - 0
     - 204
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p2
     django_migrate: true
     host: 10.162.36.205
@@ -42,7 +45,8 @@ postgresql_dbs:
     - 205
     - 409
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p3
     django_migrate: true
     host: 10.162.36.205
@@ -57,7 +61,8 @@ postgresql_dbs:
     - 410
     - 614
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p4
     django_migrate: true
     host: 10.162.36.205
@@ -72,7 +77,8 @@ postgresql_dbs:
     - 615
     - 819
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: p5
     django_migrate: true
     host: 10.162.36.205
@@ -87,7 +93,8 @@ postgresql_dbs:
     - 820
     - 1023
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: proxy
     django_migrate: true
     host: 10.162.36.205
@@ -99,7 +106,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: synclogs
     django_migrate: true
     host: 10.162.36.205
@@ -111,7 +119,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: ucr
     django_migrate: true
     host: 10.162.36.205
@@ -123,7 +132,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: null
     django_migrate: true
     host: 10.162.36.205
@@ -135,7 +145,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: icds-ucr
     django_migrate: true
     host: 10.162.36.205
@@ -148,7 +159,8 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   custom:
-  - create: true
+  - conn_max_age: null
+    create: true
     django_alias: icds-ucr
     django_migrate: true
     host: 10.162.36.205
@@ -163,6 +175,7 @@ postgresql_dbs:
   form_processing:
     partitions:
       p1:
+        conn_max_age: null
         create: true
         django_alias: p1
         django_migrate: true
@@ -179,6 +192,7 @@ postgresql_dbs:
         - 204
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p2:
+        conn_max_age: null
         create: true
         django_alias: p2
         django_migrate: true
@@ -195,6 +209,7 @@ postgresql_dbs:
         - 409
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p3:
+        conn_max_age: null
         create: true
         django_alias: p3
         django_migrate: true
@@ -211,6 +226,7 @@ postgresql_dbs:
         - 614
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p4:
+        conn_max_age: null
         create: true
         django_alias: p4
         django_migrate: true
@@ -227,6 +243,7 @@ postgresql_dbs:
         - 819
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p5:
+        conn_max_age: null
         create: true
         django_alias: p5
         django_migrate: true
@@ -243,6 +260,7 @@ postgresql_dbs:
         - 1023
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
     proxy:
+      conn_max_age: null
       create: true
       django_alias: proxy
       django_migrate: true
@@ -256,6 +274,7 @@ postgresql_dbs:
       query_stats: false
       user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   formplayer:
+    conn_max_age: null
     create: true
     django_alias: null
     django_migrate: true
@@ -269,6 +288,7 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   main:
+    conn_max_age: null
     create: true
     django_alias: default
     django_migrate: true
@@ -283,6 +303,7 @@ postgresql_dbs:
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   standby: []
   synclogs:
+    conn_max_age: null
     create: true
     django_alias: synclogs
     django_migrate: true
@@ -296,6 +317,7 @@ postgresql_dbs:
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   ucr:
+    conn_max_age: null
     create: true
     django_alias: ucr
     django_migrate: true
