CAS nginx site should always use mobile webworkers

--- a/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
@@ -6,7 +6,7 @@ nginx_sites:
 - server:
    balancers:
     - name: "{{ deploy_env }}_cas_commcare"
-      hosts: webworkers
+      hosts: "{{ groups['mobile_webworkers'] | default('webworkers') }}"
       port: "{{ django_port }}"
     - name: "{{ deploy_env }}_cas_formplayer"
       hosts: formplayer
