Use haproxy for couch on swiss

--- a/environments/swiss/public.yml
+++ b/environments/swiss/public.yml
@@ -50,6 +50,7 @@ couchdb2:
   username: "{{ localsettings_private.COUCH_USERNAME }}"
   password: "{{ localsettings_private.COUCH_PASSWORD }}"
 
+couchdb_use_haproxy: True
 
 BROKER_URL: 'redis://{{ groups.redis.0 }}:6379/0'
 
