Make ansible pull CommcareHQ source as cchq user

--- a/src/commcare_cloud/ansible/roles/commcarehq/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/commcarehq/tasks/main.yml
@@ -50,6 +50,7 @@
         recursive: yes
         accept_hostkey: yes
         update: yes
+      become_user: "{{ cchq_user }}"
       become: true
       tags:
         - git
