--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -242,9 +242,11 @@ couchproxy0
 
 [djangomanage0]
 10.202.10.185 hostname=djangomanage0-production ufw_private_interface=eth0
+[djangomanage1]
+10.202.10.54 hostname=djangomanage1-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 
 [django_manage:children]
-djangomanage0
+djangomanage1
 
 [openvpn]
 10.202.20.194  # ansible_host=18.235.223.2
