--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -43,6 +43,13 @@ servers:
     volume_size: 80
     group: "django_manage"
     os: trusty
+  - server_name: "djangomanage1-production"
+    server_instance_type: c5.xlarge
+    network_tier: "app-private"
+    az: "a"
+    volume_size: 80
+    group: "django_manage"
+    os: bionic
 
   - server_name: "web0-production"
     server_instance_type: m5.2xlarge
