skip install py3 virtualenv during tests (like py2)

--- a/src/commcare_cloud/ansible/roles/commcarehq/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/commcarehq/tasks/main.yml
@@ -86,7 +86,7 @@
       tags:
         - slow
         - py3
-      when: (py3_include_venv is defined and py3_include_venv)
+      when: (py3_include_venv is defined and py3_include_venv) and (not testing|default(False))
 
     - name: chown clone
       become: true
