Switch to dictionary

--- a/environments/icds-cas/app-processes.yml
+++ b/environments/icds-cas/app-processes.yml
@@ -3,12 +3,12 @@ gunicorn_workers_static_factor: 4
 
 management_commands:
   celery0:
-    - submission_reprocessing_queue
+    submission_reprocessing_queue:
   celery1:
-    - queue_schedule_instances
-    - handle_survey_actions
+    queue_schedule_instances:
+    handle_survey_actions:
   celery5:
-    - sms_queue
+    sms_queue:
 
 celery_processes:
   None:
