Update all environments to specify managemnet commands

--- a/environments/swiss/app-processes.yml
+++ b/environments/swiss/app-processes.yml
@@ -1,5 +1,7 @@
 formplayer_memory: "1024m"
 
+management_commands:
+  swiss0:
 celery_processes:
   swiss0:
     repeat_record_queue,celery,export_download_queue:
