--- a/environments/echis/app-processes.yml
+++ b/environments/echis/app-processes.yml
@@ -3,6 +3,13 @@ formplayer_memory: "1024m"
 gunicorn_workers_factor: 0
 gunicorn_workers_static_factor: 6
 
+management_commands:
+  echis_server0:
+    submission_reprocessing_queue:
+    queue_schedule_instances:
+    handle_survey_actions:
+    sms_queue:
+
 celery_processes:
   None:
     repeat_record_queue:
