--- a/environments/icds-new/app-processes.yml
+++ b/environments/icds-new/app-processes.yml
@@ -2,6 +2,14 @@ http_proxy: 10.247.63.132:3128
 additional_no_proxy_hosts: "relay.nic.in,smsgw.sms.gov.in,icds-cas.gov.in"
 formplayer_memory: "8000m"
 gunicorn_workers_static_factor: 4
+management_commands:
+  celery0:
+    submission_reprocessing_queue:
+  celery1:
+    queue_schedule_instances:
+    handle_survey_actions:
+  web0:
+    sms_queue:
 celery_processes:
   None:
     repeat_record_queue:
